Fix base dir of `--output` in `asakusa` command.